Simplifies the thread management of display views
This change eliminates one layer of threading (the view update thread), which does not appear to be necessary as both OpenGL and Java2D views use another thread to paint or animate their contents (they are not SWT components)