@@ -1,7 +1,7 @@
 /*******************************************************************************************************
  *
- * GamaGLAnimator.java, in gama.ui.display.opengl, is part of the source code of the GAMA modeling and simulation platform
- * .
+ * GamaGLAnimator.java, in gama.ui.display.opengl, is part of the source code of the GAMA modeling and simulation
+ * platform .
  *
  * (c) 2007-2024 UMI 209 UMMISCO IRD/SU & Partners (IRIT, MIAT, TLU, CTU)
  *
@@ -42,8 +42,8 @@ public class GamaGLAnimator implements Runnable, GLAnimatorControl, GLAnimatorCo
 	/** The animator thread. */
 	protected final Thread animatorThread;
 
-	/** The drawable. */
-	private final GLAutoDrawable drawable;
+	/** The canvas. */
+	private final GLAutoDrawable canvas;
 
 	/** The stop requested. */
 	protected volatile boolean stopRequested = false;
@@ -103,12 +103,12 @@ public class GamaGLAnimator implements Runnable, GLAnimatorControl, GLAnimatorCo
 	 * Instantiates a new single thread GL animator.
 	 *
 	 * @param window
-	 *            the drawable
+	 *            the canvas
 	 */
 	public GamaGLAnimator(final GLAutoDrawable window) {
-		this.drawable = window;
+		this.canvas = window;
 		window.setAnimator(this);
-		this.animatorThread = new Thread(this, "Animator thread");
+		this.animatorThread = Thread.ofVirtual().name("Animator thread").unstarted(this);
 		GamaPreferences.Displays.OPENGL_FPS.onChange(fpsChanged);
 		setUpdateFPSFrames(FPSCounter.DEFAULT_FRAMES_PER_INTERVAL, null);
 	}
@@ -168,15 +168,26 @@ public class GamaGLAnimator implements Runnable, GLAnimatorControl, GLAnimatorCo
 		while (!stopRequested) {
 			try {
 				// if (isARM() || PlatformHelper.isLinux()) {
-				WorkbenchHelper.run(() -> { if (drawable.isRealized()) { drawable.display(); } });
-				// } else if (drawable.isRealized()) { drawable.display(); }
+				// if (canvas.isRealized()) { canvas.display(); }
+				// Thread.ofVirtual().start(() -> {
+
+				// if (canvas.isRealized()) { canvas.display(); }
+
+				// });
+
+				WorkbenchHelper.run(() -> {
+
+					if (canvas.isRealized()) { canvas.display(); }
+
+				});
+				// } else if (canvas.isRealized()) { canvas.display(); }
 				if (capFPS) {
 					final long frameDuration = 1000 / targetFPS;
 					final long timeSleep = frameDuration - fpsLastPeriod;
 					if (timeSleep >= 0) { THREADS.WAIT(timeSleep); }
 				}
 			} catch (final RuntimeException ex) {
-				uncaughtException(this, drawable, ex);
+				uncaughtException(this, canvas, ex);
 			}
 			tickFPS();
 		}
@@ -191,7 +202,7 @@ public class GamaGLAnimator implements Runnable, GLAnimatorControl, GLAnimatorCo
 	@Override
 	public void uncaughtException(final GLAnimatorControl animator, final GLAutoDrawable drawable,
 			final Throwable cause) {
-		DEBUG.ERR("Uncaught exception in animator & drawable:" + cause.getMessage());
+		DEBUG.ERR("Uncaught exception in animator & canvas:" + cause.getMessage());
 		cause.printStackTrace();
 
 	}
